<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dinht.jobdung.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="@dimen/pad_60"
        android:paddingLeft="@dimen/pad_60"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/txtRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regis"
            android:textAllCaps="true"
            android:paddingTop="@dimen/pad_10"
            android:textSize="@dimen/text_two"
            android:textAlignment="center"
            android:textColor="#fff"/>
        <TextView
            android:id="@+id/txtAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/acc"
            android:textSize="@dimen/text_one"
            android:textAlignment="center"
            android:textColor="#fff"/>
        <!--user-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_60"
            android:background="@drawable/input"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgUser"
                android:paddingTop="@dimen/pad_10"
                android:layout_width="@dimen/pad_30"
                android:layout_height="@dimen/pad_30"
                app:srcCompat="@drawable/lock" />
            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="textPassword"/>
        </LinearLayout>
        <!--name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/pad_10"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtFname"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/input"
                android:paddingLeft="@dimen/pad_30"
                android:paddingTop="@dimen/pad_10"
                android:hint="@string/fname"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtLname"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/latname"
                android:layout_marginLeft="30dp"
                android:paddingTop="@dimen/pad_10"
                android:background="@drawable/input"
                android:inputType="text"/>
        </LinearLayout>
        <!--email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_10"
            android:background="@drawable/input"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgEmail"
                android:paddingTop="@dimen/pad_10"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/email" />
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textPassword"/>
        </LinearLayout>
        <!--pass-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_10"
            android:background="@drawable/input"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgPass"
                android:paddingTop="@dimen/pad_10"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/key" />
            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"/>
        </LinearLayout>
        <!--code-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_10"
            android:background="@drawable/input"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgCode"
                android:paddingTop="@dimen/pad_10"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/code" />
            <EditText
                android:id="@+id/edtCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intro"
                android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/pad_10"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/text_one" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/pad_20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_ok"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_login"/>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
