<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dinht.jobdung.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/pad_60"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/txtRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textAllCaps="true"
            android:paddingTop="@dimen/pad_10"
            android:textSize="@dimen/text_size"
            android:textAlignment="center"
            android:textColor="#fff"/>
        <TextView
            android:id="@+id/txtAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/code_intro"
            android:paddingTop="@dimen/pad_10"
            android:textSize="@dimen/text_one"
            android:textAlignment="center"
            android:textColor="#fff"/>
        <!--code-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_30"
            android:background="@drawable/input"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgCode"
                android:paddingTop="@dimen/pad_10"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/code" />
            <EditText
                android:id="@+id/edtCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intro_hint"
                android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/pad_40"
            android:background="@drawable/button"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/text_one" />
        <TextView
            android:id="@+id/txtCode_erro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/code_ero"
            android:paddingTop="@dimen/pad_20"
            android:textSize="@dimen/text_one"
            android:textAlignment="center"
            android:textColor="#fff"/>
        <TextView
            android:id="@+id/txtCode_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/code_again"
            android:paddingTop="@dimen/pad_10"
            android:textSize="@dimen/text_one"
            android:textAlignment="center"
            android:textColor="#fff"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
