<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dinht.jobdung.Step3Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imgFinish"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:paddingLeft="@dimen/pad_30"
            android:paddingRight="@dimen/pad_30"
            app:srcCompat="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txtStep4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_4"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingTop="@dimen/pad_10"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/txtStep4_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/finish"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_one"/>
        />
        <Button
            android:id="@+id/btnStep4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_20"
            android:background="@drawable/button"
            android:text="@string/step_4_next"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
