<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dinht.jobdung.AddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_address"
        android:orientation="vertical"
        android:paddingLeft="@dimen/pad_60"
        android:paddingRight="@dimen/pad_60">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/list" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_10"
                android:hint="@string/menu"
                android:paddingLeft="@dimen/pad_10"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="@dimen/pad_30"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_10"
            android:background="@drawable/input">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/search" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/ser_menu"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="330dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/menu_ok"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/text_one" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>

